--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <ol>
 <li>Introductiont to &quot;iris&quot; data</li>
 <li>Decision Tree building</li>
-<li>Deployment</li>
+<li>Prediction</li>
 </ol>
 
   </article>
@@ -61,9 +61,59 @@
     <h2>Iris Data</h2>
   </hgroup>
   <article data-timings="">
-    <ol>
-<li></li>
-</ol>
+    <ul>
+<li>Iris data is standard data set available in R package &quot;datasets&quot;</li>
+<li>Iris data set gives the measurements in centimeters of the variables sepal length and width and petal length and width, respectively, for 50 flowers from each of 3 species of iris. The species are Iris setosa, versicolor, and virginica.</li>
+<li>Execute following R commands to know more about iris data set</li>
+</ul>
+
+<pre><code class="r">require(datasets)
+data(iris)
+str(iris)
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-3" style="background:;">
+  <hgroup>
+    <h2>Decision Tree</h2>
+  </hgroup>
+  <article data-timings="">
+    <ul>
+<li>We will build a decision tree model to find out Species of flowers from their  sepal length and width and petal length and width</li>
+<li>For this we use following R package &quot;rpart&quot; and following commands to to build a decision tree</li>
+</ul>
+
+<pre><code class="r">attach(iris)
+Data.Iris=as.data.frame(iris)
+Data.Iris=Data.Iris[complete.cases(Data.Iris),]
+require(rpart)
+Dec.Tree&lt;- rpart(Species~., data=Data.Iris)
+</code></pre>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-4" style="background:;">
+  <hgroup>
+    <h2>Checking for new data set</h2>
+  </hgroup>
+  <article data-timings="">
+    <ul>
+<li>Following R code predicts the Species of flower from any new data point Test_Data</li>
+</ul>
+
+<pre><code class="r">Test_Data=Test_Data=data.frame(Sepal.Length=0.5, Sepal.Width=1,Petal.Length=2, Petal.Width=3)
+Prediction&lt;-predict(Dec.Tree,Test_Data,type = &quot;class&quot;)
+cat(&quot;The predicted Species is:&quot;, as.character(Prediction))
+</code></pre>
+
+<ul>
+<li>The entire code deployed using shiny app in the following page where one can play with different input parameters and see the predicted class of flower</li>
+</ul>
 
   </article>
   <!-- Presenter Notes -->
@@ -83,6 +133,18 @@
       <a href="#" target="_self" rel='tooltip' 
         data-slide=2 title='Iris Data'>
          2
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=3 title='Decision Tree'>
+         3
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='Checking for new data set'>
+         4
       </a>
     </li>
   </ul>
